--- a/zip4j/build.gradle
+++ b/zip4j/build.gradle
@@ -13,16 +13,10 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles 'consumer-rules.pro'
     }
 
     buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
+        release {}
     }
 
 }
@@ -30,10 +24,7 @@ android {
 
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    //testImplementation 'junit:junit:4.12'
     testImplementation "junit:junit:${property('junit.version')}"
     testImplementation "org.assertj:assertj-core:${property('assertj.version')}"
     testImplementation "org.mockito:mockito-core:${property('mockito.version')}"
