--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,13 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven{
+            url "https://oss.sonatype.org/content/repositories/snapshots"
+        }
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
