Revert "circleci - test with multiple android levels"
This reverts commit f86dd48579fce7acce199703812163ab804b273d.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,126 +4,10 @@ orbs:
  android: circleci/android@0.2.0
 
 jobs:
-  android-27:
+  build:
     working_directory: ~/code
     docker:
       - image: circleci/android:api-27-node
-    steps:
-      - checkout
-      - restore_cache:
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      - run:
-          command: ./update_zip4j.sh
-      - run:
-         name: Chmod permissions
-         command: sudo chmod +x ./gradlew          
-      - run:
-          name: Download Dependencies
-          command: ./gradlew androidDependencies
-      - save_cache:
-          paths:
-            - ~/.gradle
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      - run:
-          name: Run Tests
-          command: ./gradlew :zip4j:testReleaseUnitTest --tests net.lingala.zip4j.*
-      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
-          path: zip4j/build/reports
-          destination: reports
-      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: zip4j/build/test-results
-
-  android-26:
-    working_directory: ~/code
-    docker:
-      - image: circleci/android:api-26-node
-    steps:
-      - checkout
-      - restore_cache:
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      - run:
-          command: ./update_zip4j.sh
-      - run:
-         name: Chmod permissions
-         command: sudo chmod +x ./gradlew          
-      - run:
-          name: Download Dependencies
-          command: ./gradlew androidDependencies
-      - save_cache:
-          paths:
-            - ~/.gradle
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      - run:
-          name: Run Tests
-          command: ./gradlew :zip4j:testReleaseUnitTest --tests net.lingala.zip4j.*
-      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
-          path: zip4j/build/reports
-          destination: reports
-      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: zip4j/build/test-results
-
-  android-25:
-    working_directory: ~/code
-    docker:
-      - image: circleci/android:api-25-node
-    steps:
-      - checkout
-      - restore_cache:
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      - run:
-          command: ./update_zip4j.sh
-      - run:
-         name: Chmod permissions
-         command: sudo chmod +x ./gradlew          
-      - run:
-          name: Download Dependencies
-          command: ./gradlew androidDependencies
-      - save_cache:
-          paths:
-            - ~/.gradle
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      - run:
-          name: Run Tests
-          command: ./gradlew :zip4j:testReleaseUnitTest --tests net.lingala.zip4j.*
-      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
-          path: zip4j/build/reports
-          destination: reports
-      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: zip4j/build/test-results
-
-  android-24:
-    working_directory: ~/code
-    docker:
-      - image: circleci/android:api-24-node
-    steps:
-      - checkout
-      - restore_cache:
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      - run:
-          command: ./update_zip4j.sh
-      - run:
-         name: Chmod permissions
-         command: sudo chmod +x ./gradlew          
-      - run:
-          name: Download Dependencies
-          command: ./gradlew androidDependencies
-      - save_cache:
-          paths:
-            - ~/.gradle
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      - run:
-          name: Run Tests
-          command: ./gradlew :zip4j:testReleaseUnitTest --tests net.lingala.zip4j.*
-      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
-          path: zip4j/build/reports
-          destination: reports
-      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: zip4j/build/test-results
-
-  android-23:
-    working_directory: ~/code
-    docker:
-      - image: circleci/android:api-23-node
     steps:
       - checkout
       - restore_cache:
