--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,64 @@ jobs:
   build:
     working_directory: ~/code
     docker:
+      - image: circleci/android:api-29-node
+    steps:
+      - checkout
+      - restore_cache:
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          command: ./update_zip4j.sh
+      - run:
+         name: Chmod permissions
+         command: sudo chmod +x ./gradlew          
+      - run:
+          name: Download Dependencies
+          command: ./gradlew androidDependencies
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          name: Run Tests
+          command: ./gradlew :zip4j:testReleaseUnitTest --tests net.lingala.zip4j.*
+      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
+          path: zip4j/build/reports
+          destination: reports
+      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
+          path: zip4j/build/test-results
+
+  android-28:
+    working_directory: ~/code
+    docker:
+      - image: circleci/android:api-28-node
+    steps:
+      - checkout
+      - restore_cache:
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          command: ./update_zip4j.sh
+      - run:
+         name: Chmod permissions
+         command: sudo chmod +x ./gradlew          
+      - run:
+          name: Download Dependencies
+          command: ./gradlew androidDependencies
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          name: Run Tests
+          command: ./gradlew :zip4j:testReleaseUnitTest --tests net.lingala.zip4j.*
+      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
+          path: zip4j/build/reports
+          destination: reports
+      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
+          path: zip4j/build/test-results
+
+  android-27:
+    working_directory: ~/code
+    docker:
       - image: circleci/android:api-27-node
     steps:
       - checkout
